<resources>
    <string name="app_name">Movie Store</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <!--Movie Store App-->
    <string name="movies">Movies</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="cast">Cast &#38; Crew</string>
    <string name="search_title">Input movie name..</string>
</resources>
